--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "bankai build index.js",
+    "build": "browserify index.js -o bundles/bundle.js -t sheetify -p [ css-extract -o bundles/bundle.css ] index.js",
     "create": "choo-scaffold",
     "inspect": "bankai inspect index.js",
     "start": "bankai start index.js",
@@ -17,16 +17,18 @@
     "chrono-node": "^1.3.5",
     "hyperquest": "^2.1.3",
     "pump": "^3.0.0",
-    "sheetify": "^7.3.2",
     "strftime": "^0.10.0",
     "tachyons": "^4.10.0",
     "to2": "^1.0.0"
   },
   "devDependencies": {
     "bankai": "^9.14.0",
+    "browserify": "^16.2.2",
     "choo-devtools": "^2.5.1",
     "choo-scaffold": "^1.1.2",
+    "css-extract": "^1.3.0",
     "dependency-check": "^3.1.0",
+    "sheetify": "^7.3.2",
     "standard": "^11.0.1"
   }
 }
